--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mork-riscv = {path = "mork-riscv" }
+riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
+    "inline-asm",
+] }
+sbi-rt = { version = "0.0.2", features = ["legacy"] }
 log = "0.4"
 fdt = "0.1.5"
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
